--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
   <script type="module" src="/src/main.ts"></script>
 </body>
 
+<script>
+  (function () {
+    let redirect = sessionStorage.redirect;
+    delete sessionStorage.redirect;
+    if (redirect && redirect !== location.href) {
+      history.replaceState(null, null, redirect);
+    }
+  })();
+</script>
 
 </html>
